Correct sidebar z-index bug

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav{
     flex-direction: row;
     position: fixed;
     bottom: 0;
-    z-index: 100;
+    z-index: 6;
     width: 100%;
     color: white;
 }
@@ -122,7 +122,7 @@ main{
     transform: translateY(-40%);
     background-color: white;
     border-radius: 50%;
-    z-index: 2;
+    z-index: 4;
     display: none;
 }
 .big-btn:hover{
@@ -139,7 +139,7 @@ main{
     color: ghostwhite;
     top: 0;
     bottom: 70px;
-    z-index: 10;
+    z-index: -1;
 }
 aside img, aside .fa{
     font-size: 30px;
@@ -264,7 +264,7 @@ aside .selected{
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 3;
+    z-index: 5;
     background-color: #0000006c;
 }
 .proposal a:hover .overlay{
